--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Mogo</title>
-  <link rel="stylesheet" type="text/css" href="../slick/slick.css" />
-  <link rel="stylesheet" type="text/css" href="../slick/slick-theme.css" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+  <link rel="stylesheet" href="css/style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&display=swap"
     rel="stylesheet" />
     <link href="https://file.myfontastic.com/b3m9tDxA7NY8Hn7Dsv9KL6/icons.css" rel="stylesheet">
@@ -325,8 +325,8 @@
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-  <script type="text/javascript" src="../slick/slick.min.js"></script>
-  <script src="../app.js"></script>
+  <script type="text/javascript" src="slick/slick.min.js"></script>
+  <script src="app.js"></script>
 </body>
 
 </html>
